--- a/app/public/index.html
+++ b/app/public/index.html
@@ -7,15 +7,23 @@
     <!-- The above 3 meta tags *must* come first in the head -->
     
     <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/dxm.css" rel="stylesheet">
 
 </head>
 <body ng-controller="MainCtrl">
 	<h1>{{hello}}</h1>
 	
+	<div ng-view></div>
+	
 	<script src="/bower_components/jquery/dist/jquery.js"></script>
+	<script src='/bower_components/lodash/lodash.js'></script>
 	<script src="/bower_components/angular/angular.js"></script>
 	<!-- <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>	-->
 	<script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+	<script src='/bower_components/angular-simple-logger/dist/index.js'></script>
+	<script src='/bower_components/angular-google-maps/dist/angular-google-maps.js'></script>
+	<script src='/bower_components/angular-route/angular-route.js'></script>
+
 	<script src="/scripts/app.js"></script>
 	<script src="/scripts/controllers.js"></script>
 </body>
