--- a/app/public/index.html
+++ b/app/public/index.html
@@ -22,6 +22,7 @@
 	<script src='/bower_components/angular-simple-logger/dist/index.js'></script>
 	<script src='/bower_components/angular-google-maps/dist/angular-google-maps.js'></script>
 	<script src='/bower_components/angular-route/angular-route.js'></script>
+	<script src='/bower_components/angular-resource/angular-resource.js'></script>
 
 	<script src="/scripts/app.js"></script>
 	<script src="/scripts/controllers.js"></script>
